[project]
name = "elfcnndet"
version = "0.2.1"
description = "1D-CNN ELF malware detector with multi-GPU DataParallel — template for lolday"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "bolin8017" }]
keywords = ["malware", "detection", "elf", "pytorch", "deep-learning", "gpu"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "islab-malware-detector[mlflow]>=0.5.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "torch>=2.2.0",
    "pyelftools>=0.30",
    "structlog>=24.0.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pytest-cov>=4.1.0", "ruff>=0.1.0"]

[project.scripts]
elfcnndet = "elfcnndet.cli:app"

[project.urls]
Homepage = "https://github.com/bolin8017/elfcnndet"
Repository = "https://github.com/bolin8017/elfcnndet.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/elfcnndet"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
